install of zizaco/confide zizaco/entrust

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+		"zizaco/confide": "dev-master",
+		"zizaco/entrust": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
