--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
 		"zizaco/confide": "dev-master",
 		"zizaco/entrust": "dev-master"
 	},
+	"require-dev": {
+        "way/generators": "dev-master"
+	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
