--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"twitter/bootstrap": "dev-master",
 		"fortawesome/font-awesome": "3.2.*@dev",
 		"jasonlewis/basset": "dev-master",
-		"teepluss/api": "dev-master"
+		"teepluss/api": "dev-master",
+		"anahkiasen/former": "dev-agnostic"
 	},
 	"require-dev": {
         "way/generators": "dev-master",
